# hep-utilities

./: .gitignore  .projectile  .travis.yml  LICENSE  README.md  build.nix  default.nix  hep-kinematics.cabal  hep-utilities.cabal  hep-vector.cabal  package.yaml  phyvec.cabal  release.nix  shell.nix  stack.yaml
csrc/: FlatRandom.h  mTLowerAndUpperBound.h  mTLowerAndUpperBound_c.cc  mTLowerAndUpperBound_c.h
examples/: lhco_pipesparse.hs  lhef_parse.hs  lhef_pipesparse.hs  mat.hs  mt2.hs  twobody.hs
src/HEP/: Kinematics.hs  Vector.hs
src/HEP/Analysis/: Histogram1D.hs
src/HEP/Data/: LHCO.hs  LHEF.hs
src/HEP/Data/HepMC/: Parser.hs  Type.hs
src/HEP/Data/LHCO/: PipesUtil.hs  Type.hs
src/HEP/Data/LHEF/: Parser.hs  PipesUtil.hs  Type.hs
src/HEP/Kinematics/: TwoBody.hs  Variable.hs
src/HEP/Kinematics/Variable/: Antler.hs  Internal.hs  MAOS.hs  MT2.hs  MTLowerAndUpper.hs  MTLowerAndUpper.hsc
src/HEP/Kinematics/Vector/: LorentzTVector.hs  LorentzVector.hs  ThreeVector.hs  TwoVector.hs
src/HEP/Particle/: ID.hs
src/HEP/Vector/: FourVector.hs  LorentzTVector.hs  LorentzTransverseVector.hs  LorentzVector.hs  ThreeVector.hs  TwoVector.hs
test/: test_mt2.hs  test_mtbound.hs
