name:                hep-kinematics
version:             0.1.0.0
synopsis:            Tools for Relativistic kinematics in high energy physics
description:         Types and functions for various vectors and kinematics variables in collider studies.
homepage:            http://github.com/cbpark/hep-kinematics
bug-reports:         http://github.com/cbpark/hep-kinematics/issues
license:             BSD3
license-file:        LICENSE
author:              Chan Beom Park
maintainer:          Chan Beom Park <cbpark@gmail.com>
copyright:           (c) 2014 - 2015 Chan Beom Park
category:            Physics
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:                git
  location:            git@github.com:cbpark/hep-kinematics.git

library
  exposed-modules:     HEP.Kinematics
                       HEP.Kinematics.Vector.TwoVector
                       HEP.Kinematics.Vector.ThreeVector
                       HEP.Kinematics.Vector.LorentzTVector
                       HEP.Kinematics.Vector.LorentzVector
  build-depends:       base >=4.8
                     , linear >=1.10
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -funbox-strict-fields