name:                hep-utilities
version:             0.1.0.0
synopsis:            Utilities for analyzing high energy physics data
description:         Types and functions for various vectors, kinematics variables, and utilities for collider studies
homepage:            https://github.com/cbpark/hep-utilities
bug-reports:         https://github.com/cbpark/hep-utilities/issues
license:             BSD3
license-file:        LICENSE
author:              Chan Beom Park
maintainer:          Chan Beom Park <cbpark@gmail.com>
copyright:           (c) 2014-2017 Chan Beom Park
category:            Data, Physics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

source-repository head
  type:                git
  location:            https://github.com/cbpark/hep-utilities

flag devel
  description:         Create small test executables
  default:             False

library
  exposed-modules:     HEP.Analysis.Histogram1D
                       HEP.Kinematics
                       HEP.Kinematics.Variable
                       HEP.Kinematics.Vector.TwoVector
                       HEP.Kinematics.Vector.ThreeVector
                       HEP.Kinematics.Vector.LorentzTVector
                       HEP.Kinematics.Vector.LorentzVector
                       HEP.Particle.ID
  other-modules:       HEP.Kinematics.Variable.MAOS
                       HEP.Kinematics.Variable.MT2
                       HEP.Kinematics.Variable.MTLowerAndUpper

  build-depends:       base             >= 4.8 && < 5
                     , attoparsec       >= 0.12
                     , bytestring       >= 0.10
                     , lens
                     , linear
                     , mwc-random
                     , pipes            >= 4.1
                     , pipes-attoparsec >= 0.5
                     , pipes-bytestring >= 2.1
                     , transformers     >= 0.3
                     , vector
  if !impl(ghc > 8.0)
    build-depends:     semigroups       >= 0.18 && < 0.19

  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wcompat -Wall -funbox-strict-fields

executable test_mt2
  main-is:             test_mt2.hs
  build-depends:       base >=4.8
                     , hep-utilities
  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -Wall
  if flag(devel)
    buildable:         True
  else
    buildable:         False

executable test_mtbound
  main-is:             test_mtbound.hs
  build-depends:       base >=4.8
                     , hep-utilities
  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -Wall
  if flag(devel)
    buildable:         True
  else
    buildable:         False