name:                hep-vector
version:             0.1.0.0
synopsis:            Vectors in physics
description:         Various vectors for utiliting in the high energy physics studies and analyses
license:             BSD3
license-file:        LICENSE
author:              Chan Beom Park
maintainer:          chanbeom.park@cern.ch
category:            Physics
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     HEP.Vector
                       HEP.Vector.TwoVector
                       HEP.Vector.ThreeVector
                       HEP.Vector.LorentzTVector
                       HEP.Vector.LorentzVector
  build-depends:       base >=4.6
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -funbox-strict-fields -fwarn-incomplete-patterns