name:                hep-vector
version:             0.1.0.0
synopsis:            Vectors in high energy physics
description:         Various vectors and their functions for utilizing in studies and analyses for high-energy physics processes.
homepage:            http://github.com/cbpark/hep-vector
bug-reports:         http://github.com/cbpark/hep-vector/issues
license:             BSD3
license-file:        LICENSE
author:              Chan Beom Park
maintainer:          Chan Beom Park <cbpark@gmail.com>
copyright:           (c) 2014 - 2015 Chan Beom Park
category:            Physics
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:                git
  location:            git@github.com:cbpark/hep-vector.git

library
  exposed-modules:     HEP.Vector
                       HEP.Vector.TwoVector
                       HEP.Vector.ThreeVector
                       HEP.Vector.LorentzTVector
                       HEP.Vector.LorentzVector
  build-depends:       base >=4.6
                     , linear >=1.10
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -funbox-strict-fields