name:                phyvec
version:             0.1.0.0
synopsis:            Vectors in physics
description:         Various vectors for utiliting in the physics studies and analyses
license:             BSD3
license-file:        LICENSE
author:              Chan Beom Park
maintainer:          chanbeom.park@cern.ch
category:            Physics
build-type:          Simple
cabal-version:       >=1.8

library
  hs-source-dirs:      src
  ghc-options:         -Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind -fwarn-incomplete-patterns
  build-depends:       base >= 4.6
  exposed-modules:     HEP.Vector.FourVector
                       HEP.Vector.ThreeVector